# pageos-greet

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md
.github/workflows/: deploy.yaml
doc/: Scrach 适配细则.txt  design-adapter.md  design.md  greetd-agreety.md  greetd-ipc.md  login.html  prompt.md  to-do.md  tuigreet.md
src/: ipc.rs  main.rs  pageos-greet-extension.js  server.rs
