[package]
name = "pageos-greet"
version = "0.1.0"
authors = ["PJ568 <pj568@pj568.eu.org>"]
edition = "2024"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.98"
greetd_ipc = { version = "0.10.3", features = ["tokio-codec"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["full"] }
warp = "0.3.7"
