[package]
name = "pageos-greet"
version = "0.2.0"
authors = ["PJ568 <pj568@pj568.eu.org>"]
edition = "2024"
license = "MPL-2.0"
description = "Rust 语言编写的登录界面服务器。包含一个最小网页服务器和内置的登录页面。"
repository = "https://github.com/swaybien/pageos-greet"
homepage = "https://github.com/swaybien/pageos-greet"
keywords = ["greetd", "login", "web-server", "authentication"]
categories = ["web-programming", "authentication"]

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
greetd_ipc = { version = "0.10", features = ["tokio-codec"] }
rpassword = "7.4"
