[package]
name = "pageos-greet"
version = "1.3.3"
authors = ["PJ568 <pj568@pj568.eu.org>"]
edition = "2024"
license = "MPL-2.0"
description = "Rust 语言编写的登录界面服务器。包含一个最小网页服务器和内置的登录页面。"
repository = "https://github.com/swaybien/pageos-greet"
homepage = "https://github.com/swaybien/pageos-greet"
keywords = ["greetd", "login", "web-server", "authentication"]
categories = ["web-programming", "authentication"]

[dependencies]
tokio = { version = "1.37", features = ["full", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
greetd_ipc = { version = "0.10", features = ["tokio-codec"] }
axum = { version = "0.8", features = ["ws"] }
tokio-websockets = "0.11"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
